@@ -5,16 +5,19 @@ import static com.project.openmarket.global.exception.enums.ExceptionConstants.*
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.bson.types.ObjectId;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.project.openmarket.domain.product.dto.request.ProductRequestDto;
 import com.project.openmarket.domain.product.dto.request.ProductUpdateReqeustDto;
+import com.project.openmarket.domain.product.dto.response.ProductCreateResponseDto;
 import com.project.openmarket.domain.product.dto.response.ProductResponseDto;
 import com.project.openmarket.domain.product.entity.Product;
 import com.project.openmarket.domain.product.repository.ProductRepository;
 import com.project.openmarket.domain.user.entity.Seller;
+import com.project.openmarket.domain.user.service.SellerService;
 import com.project.openmarket.global.exception.CustomException;
 
 import lombok.RequiredArgsConstructor;
@@ -24,6 +27,7 @@ import lombok.RequiredArgsConstructor;
 public class ProductService {
 
 	private final ProductRepository productRepository;
+	private final SellerService sellerService;
 
 	/**
 	 * 상품을 등록하는 메소드
@@ -31,11 +35,11 @@ public class ProductService {
 	 * @param seller 상품을 등록하려는 판매자
 	 * @return 등록된 상품의 정보
 	 */
-	public ProductResponseDto create(ProductRequestDto request, Seller seller){
+	public ProductCreateResponseDto create(ProductRequestDto request, Seller seller){
 		//상품 이름과 판매자로 일치하는 상품이 있는 경우 예외 발생
 		duplicateProduct(request.name(), seller);
 		Product product = productRepository.save(Product.of(request, seller));
-		return ProductResponseDto.of(product);
+		return ProductCreateResponseDto.of(product, seller);
 	}
 
 	/**
@@ -64,19 +68,20 @@ public class ProductService {
 	 * @param productId 조회하려는 상품의 id
 	 * @return 조회한 상품의 정보
 	 */
-	public ProductResponseDto findById(Long productId){
-		return ProductResponseDto.of(getProductById(productId));
+	public ProductResponseDto findById(String productId){
+		System.out.println(productId);
+		Product product = getProductById(new ObjectId(productId));
+		return ProductResponseDto.of(product);
 	}
 	
 	public List<Product> findByScoreDesc(String name){
 		return productRepository.findByNameContainsOrderByAvgScoreDesc(name);
 	}
 
-	//정렬 리뷰점수순, 구매순
 	public List<ProductResponseDto> findProductByName(String name, Pageable pageable){
-		return productRepository.findByNameContains(name,pageable)
-			.stream().map(p -> ProductResponseDto.of(p))
-			.collect(Collectors.toList());
+		return productRepository.findByName(name)
+			.stream().map(ProductResponseDto::of)
+			.toList();
 	}
 
 	/**
@@ -110,9 +115,8 @@ public class ProductService {
 		productRepository.save(product);
 	}
 
-	public Product getProductById(Long id){
-		return productRepository.findById(id)
-			.orElseThrow(() -> new CustomException(NOT_FOUND_PRODUCT));
+	public Product getProductById(ObjectId id){
+		return productRepository.getById(id);
 	}
 
 
